--- a/install/.env
+++ b/install/.env
@@ -6,4 +6,4 @@ TEMP_DIR=~/tmp/k3s
 CRANE_VERSION=$(curl -s "https://api.github.com/repos/google/go-containerregistry/releases/latest" | jq -r '.tag_name')
 K3S_VERSION=v1.28.3\%2Bk3s2
 CALICO_VERSION=v3.26.3
-
+HELM_VERSION=v3.12.2
