--- a/download/.env
+++ b/download/.env
@@ -7,3 +7,4 @@ CRANE_VERSION=$(curl -s "https://api.github.com/repos/google/go-containerregistr
 K3S_VERSION=v1.28.3\%2Bk3s2
 CALICO_VERSION=v3.26.3
 HELM_VERSION=$(curl -s "https://api.github.com/repos/helm/helm/releases/latest" | jq -r '.tag_name')
+LONGHORN_VERSION=$(curl -s "https://api.github.com/repos/longhorn/charts/releases/latest" | jq -r '.tag_name')
