--- a/download/.env
+++ b/download/.env
@@ -5,6 +5,9 @@ OS=Linux
 ARCH=x86_64
 CRANE_VERSION=$(curl -s "https://api.github.com/repos/google/go-containerregistry/releases/latest" | jq -r '.tag_name')
 K3S_VERSION=v1.28.3\%2Bk3s2
+K3S_SELINUX_TAG="v1.4.stable.1"
+K3S_SELINUX_VERSION="1.4-1"
 CALICO_VERSION=v3.26.3
 HELM_VERSION=$(curl -s "https://api.github.com/repos/helm/helm/releases/latest" | jq -r '.tag_name')
-LONGHORN_VERSION=$(curl -s "https://api.github.com/repos/longhorn/charts/releases/latest" | jq -r '.tag_name')
+LONGHORN_TAG=$(curl -s "https://api.github.com/repos/longhorn/charts/releases/latest" | jq -r '.tag_name')
+LONGHORN_VERSION=$(echo $LONGHORN_TAG | cut -d "-" -f 2)
