--- a/download/.env
+++ b/download/.env
@@ -3,6 +3,7 @@
 GAP_DIR=../gapfiles
 OS=Linux
 ARCH=x86_64
+K9S_VERSION=$(curl -s "https://api.github.com/repos/derailed/k9s/releases/latest" | jq -r '.tag_name')
 CRANE_VERSION=$(curl -s "https://api.github.com/repos/google/go-containerregistry/releases/latest" | jq -r '.tag_name')
 K3S_VERSION=v1.28.3\%2Bk3s2
 K3S_SELINUX_TAG="v1.4.stable.1"
